--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,8 +13,28 @@
   line-height: 24px;
   font-weight: 400;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  /* lt - light theme color */
+  --lt-background-color: rgba(248, 248, 248, 1);
+  --lt-text-color: rgba(5, 5, 5, 1);
+  --lt-border-color-opacity-twenty: rgba(5, 5, 5, 0.2);
+  --lt-text-color-opacity-thirty: rgba(5, 5, 5, 0.3);
+  --lt-text-color-opacity-fifty: rgba(5, 5, 5, 0.5);
+  --lt-text-color-opacity-sixty: rgba(248, 248, 248, 0.6);
+  --lt-text-color-opacity-eighty: rgba(5, 5, 5, 0.8);
+
+  /* dt - dark theme color */
+  --dt-background-color: rgba(22, 22, 22, 1);
+  --dt-text-color: rgba(255, 255, 255, 1);
+  --dt-border-color-opacity-twenty: rgba(255, 255, 255, 0.2);
+  --dt-text-color-opacity-thirty: rgba(255, 255, 255, 0.3);
+  --dt-text-color-opacity-fifty: rgba(255, 255, 255, 0.5);
+  --dt-text-color-opacity-sixty:rgba(255, 255, 255, 0.6);
+  --dt-text-color-opacity-eighty: rgba(255, 255, 255, 0.8);
+  
+  --brand-color: rgba(155, 181, 55, 1);
+  --stars-color: rgba(238, 161, 12, 1);
+  --shadow: 7px 5px 15px 0px rgba(160, 158, 160, 0.6);
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
