--- a/src/partials/list-of-popular.html
+++ b/src/partials/list-of-popular.html
@@ -1,5 +1,4 @@
 <section id="section-popular-recipe">
-  <div class="popular-recipe">
-    <ul class="js-popular-recipe popular-recipe-list"></ul>
+  <div id="photo-container"></div>
   </div>
 </section>
