--- a/src/partials/list-of-popular.html
+++ b/src/partials/list-of-popular.html
@@ -1,4 +1,19 @@
-<section id="section-popular-recipe">
-  <div id="photo-container"></div>
-  </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tasty-treats</title>
+  <link rel="stylesheet" href="./list-of-popular.css">
+</head>
+
+
+<body>
+
+
+  <section id="section-popular-recipe">
+    <ul class="js-popular-recipes"></ul>
+  </section>
+  <script src="./js/list-of-popular.js"></script>
+</body>
