--- a/src/partials/block-categories.html
+++ b/src/partials/block-categories.html
@@ -1,4 +1,6 @@
 <div class="all-categories-card">
-  <button class="all-categories-btn">All categories</button>
+  <button class="all-categories-btn js-all-categories-btn">
+    All categories
+  </button>
   <div class="categories-btn-card js-categories-btn-card"></div>
 </div>
