--- a/src/css/block-categories.css
+++ b/src/css/block-categories.css
@@ -85,6 +85,11 @@
   margin-bottom: 18px;
 }
 
+.all-categories-btn-active {
+  color: #f8f8f8;
+  background-color: var(--brand-color);
+}
+
 @media only screen and (min-width: 768px) {
   .categories-btn:not(:last-child) {
     margin-bottom: 24px;
