--- a/src/partials/block-categories.html
+++ b/src/partials/block-categories.html
@@ -1,5 +1,7 @@
 <div class="all-categories-card">
-  <button class="all-categories-btn js-all-categories-btn">
+  <button
+    class="all-categories-btn all-categories-btn-active js-all-categories-btn"
+  >
     All categories
   </button>
   <div class="categories-btn-card js-categories-btn-card"></div>
