--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,6 +16,7 @@
 @import url('./modal-order.css');
 @import url('./modal-rating.css');
 @import url('./modal-recipe.css');
+@import url('./main-section.css');
 
 
 
