--- a/src/css/list-of-recipes.css
+++ b/src/css/list-of-recipes.css
@@ -24,13 +24,13 @@
 
 .all-categories-btn:hover,
 .all-categories-btn:focus {
-  background-color: #9bb537;
-  color: #f8f8f8;
+  background-color: var(--brand-color);
+  color: var(--dt-text-color);
 }
 
 .all-categories-btn-active {
-  color: #f8f8f8;
-  background-color: #9bb537;
+  color: var(--dt-text-color);
+  background-color: var(--brand-color);
 }
 
 .all-categories-btn:active {
@@ -57,11 +57,7 @@
 .card-item {
   position: relative;
   border-radius: 8px;
-  background: linear-gradient(
-    1deg,
-    rgba(5, 5, 5, 0.6) 4.82%,
-    rgba(5, 5, 5, 0) 108.72%
-  );
+  background-image: linear-gradient(1deg, rgba(5, 5, 5, 0.6), rgba(5, 5, 5, 0));
   /* url(<path-to-image>), lightgray -25px -10px / 116.716% 114.018% no-repeat; */
   width: 335px;
   height: 335px;
@@ -70,11 +66,7 @@
 
 .card-img {
   border-radius: 8px;
-  background: linear-gradient(
-    1deg,
-    rgba(5, 5, 5, 0.6) 4.82%,
-    rgba(5, 5, 5, 0) 108.72%
-  );
+  background-image: linear-gradient(1deg, rgba(5, 5, 5, 0.6), rgba(5, 5, 5, 0));
   /* url(<path-to-image>), lightgray -25px -10px / 116.716% 114.018% no-repeat; */
   width: 335px;
   height: 335px;
@@ -122,10 +114,6 @@
     width: 250px;
     height: 287px;
   }
-
-  .card-item:nth-child() {
-    margin-bottom: 44px;
-  }
 }
 
 .card-svg-heart {
@@ -141,7 +129,7 @@
 }
 
 .card-dish-name {
-  color: #f8f8f8;
+  color: var(--dt-text-color);
   text-align: left;
   font-family: Inter;
   font-size: 14px;
@@ -149,6 +137,9 @@
   font-weight: 600;
   line-height: 1.28;
   text-transform: uppercase;
+  width: 208px;
+  overflow: hidden;
+  white-space: nowrap;
 
   padding: 0;
   margin: 0 0 8px 0;
@@ -162,7 +153,7 @@
   height: 32px;
 
   overflow: hidden;
-  color: #f8f8f8;
+  color: var(--dt-text-color);
   text-overflow: ellipsis;
   /* white-space: nowrap; */
   font-family: Inter;
@@ -199,7 +190,7 @@
   bottom: 16px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 303px;
 
   margin: 0;
@@ -208,23 +199,24 @@
 
 .rating-container {
   display: flex;
-  gap: 3px;
+  gap: 2px;
   align-items: center;
   justify-content: center;
+  width: 90px;
 
-  margin: 0;
+  margin-right: auto;
   padding: 0;
 }
 
 .rating-number {
-  color: #f8f8f8;
+  color: var(--dt-text-color);
   font-family: Inter;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
   line-height: 1.28;
 
-  margin: 0;
+  margin: 0 4px 0 0;
   padding: 0;
 }
 
@@ -234,18 +226,19 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
+  height: 31px;
   min-width: 89px;
 
   border-radius: 8px;
-  background: #9bb537;
+  background: var(--brand-color);
   border: none;
 
-  color: #f8f8f8;
+  color: var(--dt-text-color);
   font-family: Inter;
   font-size: 12px;
   font-style: normal;
   font-weight: 500;
-  line-height: normal;
+  line-height: 1.28;
 
   transition: color 250ms cubic-bezier(1, 0, 0, 1);
 }
@@ -267,11 +260,29 @@
     font-size: 11px;
     padding: 8px 16px;
   }
+
+  .rating-container {
+    width: 72px;
+  }
+  .rating-number {
+    margin: 0 2px 0 0;
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .rating-btn-container {
     width: 218px;
+  }
+
+  .rating-container {
+    width: 90px;
+  }
+  .rating-number {
+    margin: 0 4px 0 0;
+  }
+
+  .recipe-btn {
+    min-width: 93px;
   }
 }
 
