--- a/src/partials/list-of-popular.html
+++ b/src/partials/list-of-popular.html
@@ -1,5 +1,7 @@
-<div class="popular-recipes">
-    <h2>POPUPAR RECIPES</h2>
-    <ul class="js-popular-recipes popular-list">
-    </ul>
-</div>
+<section id="popular-recipes" class="container container-popular">
+    <h2 class="name-popular">POPULAR RECIPES</h2>
+    <div class="div-popular-recipes">
+        <ul class="js-popular-recipes popular-list">
+        </ul>
+    </div>
+</section>
