final css and js of cards

--- a/src/partials/list-of-recipes.html
+++ b/src/partials/list-of-recipes.html
@@ -1,4 +1,1 @@
-<button type="button" class="all-categories-btn">All categories</button>
-<ul class="gallery card-list js-card-list"></ul>
-
-<script src="./js/list-of-recipes.js"></script>
+<ul class="card-list js-card-list"></ul>
