--- a/src/css/list-of-recipes.css
+++ b/src/css/list-of-recipes.css
@@ -1,4 +1,4 @@
-.all-categories-btn {
+/* .all-categories-btn {
   display: inline-flex;
   padding: 14px 29px;
   justify-content: center;
@@ -41,7 +41,7 @@
   .all-categories-btn {
     padding: 14px 28px;
   }
-}
+} */
 
 .card-list {
   display: flex;
@@ -50,39 +50,43 @@
   gap: 24px;
   align-items: center;
   justify-content: center;
-  margin: 0;
+  margin-bottom: 40px;
   padding: 0;
 }
 
 .card-item {
   position: relative;
   border-radius: 8px;
-  background-image: linear-gradient(1deg, rgba(5, 5, 5, 0.6), rgba(5, 5, 5, 0));
-  /* url(<path-to-image>), lightgray -25px -10px / 116.716% 114.018% no-repeat; */
   width: 335px;
   height: 335px;
-  flex-shrink: 0;
 }
 
 .card-img {
   border-radius: 8px;
-  background-image: linear-gradient(1deg, rgba(5, 5, 5, 0.6), rgba(5, 5, 5, 0));
-  /* url(<path-to-image>), lightgray -25px -10px / 116.716% 114.018% no-repeat; */
   width: 335px;
   height: 335px;
-  flex-shrink: 0;
+}
+
+.image-gradient {
+  position: relative;
+}
+
+.image-gradient::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(1deg, rgba(5, 5, 5, 0.6), rgba(5, 5, 5, 0));
 }
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
-  .all-categories-btn {
-    margin-left: 32px;
-  }
-
   .card-list {
     flex-direction: row;
     gap: 16px;
     width: 496px;
-    margin-left: 32px;
+    margin-bottom: 64px;
   }
 
   .card-item,
@@ -93,16 +97,12 @@
 }
 
 @media screen and (min-width: 1280px) {
-  .all-categories-btn {
-    margin-left: 100px;
-  }
-
   .card-list {
     flex-direction: row;
     width: 782px;
     column-gap: 16px;
     row-gap: 20px;
-    margin-left: 64px;
+    margin-bottom: 64px;
   }
 
   .card-item {
@@ -116,10 +116,23 @@
   }
 }
 
+@media screen and (max-width: 767px) {
+  .card-item:nth-last-child(-n + 3) {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .card-item:nth-last-child(-n + 1) {
+    display: none;
+  }
+}
+
 .card-svg-heart {
   position: absolute;
   top: 16px;
   right: 16px;
+  z-index: 100;
 }
 
 .card-text {
