--- a/src/partials/list-of-popular.html
+++ b/src/partials/list-of-popular.html
@@ -1,7 +1,8 @@
-<section id="popular-recipes" class="container container-popular">
+<section id="popular-recipes" class="">
     <h2 class="name-popular">POPULAR RECIPES</h2>
-    <div class="div-popular-recipes">
-        <ul class="js-popular-recipes popular-list">
-        </ul>
-    </div>
+    <ul class="js-popular-recipes popular-list">
+        <div class="div-popular-list">
+
+        </div>
+    </ul>
 </section>
