--- a/src/css/hero-cook.css
+++ b/src/css/hero-cook.css
@@ -1,7 +1,7 @@
 /*
 <div class="swiper">
 <div class="events swiper-wrapper"></div>
-<div class="page"></div>
+<div class="event"></div>
 </div>
 
 <div class="swiper">
