--- a/src/css/list-of-popular.css
+++ b/src/css/list-of-popular.css
@@ -39,11 +39,16 @@
 
 }
 
-@media screen and (min-width:768px) {
+.description-dish {
+    font-size: 10px;
+    line-height: 1.4;
+    width: 300px;
+}
+
+@media screen and (max-width:768px) {
     .description-dish {
-        font-size: 10px;
-        line-height: 1.4;
-        width: 300px;
+        width: 200px;
+
     }
 }
 
