--- a/src/css/list-of-popular.css
+++ b/src/css/list-of-popular.css
@@ -19,8 +19,10 @@
     /* margin-left: 100px; */
 }
 
-@media screen and (max-width: 768px) {
-    .name-popular {}
+@media screen and (min-width: 768px) {
+    .name-popular {
+        margin-bottom: 32px
+    }
 }
 
 .popular-recipe-item {
@@ -42,13 +44,19 @@
 .description-dish {
     font-size: 10px;
     line-height: 1.4;
-    width: 300px;
+    width: 160px;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (min-width:768px) {
     .description-dish {
-        width: 200px;
+        width: 155px;
+    }
+}
 
+@media screen and (min-width:1200px) {
+    .description-dish {
+
+        width: 300px;
     }
 }
 
