--- a/src/css/list-of-popular.css
+++ b/src/css/list-of-popular.css
@@ -1,8 +1,14 @@
 .img-dish {
-    width: 80px;
+    width: 64px;
     border-radius: 10px;
+    height: 64px;
 }
 
+@media screen and (max-width:768px) {
+    .popular-list:nth-child(odd) {
+        display: none;
+    }
+}
 
 .popular-list {
     display: flex;
@@ -11,12 +17,14 @@
 }
 
 .name-popular {
-    /* font-size: 24px;
+    text-transform: uppercase;
+    color: var(--color-title-text);
+    font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+    font-size: 18px;
     font-style: normal;
     font-weight: 600;
-    line-height: 1.16; */
-    font-size: 24px;
-    /* margin-left: 100px; */
+    line-height: 1.28;
+    margin-bottom: 20px;
 }
 
 @media screen and (min-width: 768px) {
@@ -47,7 +55,7 @@
     width: 160px;
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width:768px) and (max-width:1159px) {
     .description-dish {
         width: 155px;
     }
