--- a/src/partials/list-of-popular.html
+++ b/src/partials/list-of-popular.html
@@ -1,4 +1,4 @@
-<section id="popular-recipes" class="">
+<section id="popular-recipes">
     <h2 class="name-popular">POPULAR RECIPES</h2>
     <ul class="js-popular-recipes popular-list">
         <div class="div-popular-list">
