--- a/src/css/list-of-popular.css
+++ b/src/css/list-of-popular.css
@@ -24,23 +24,10 @@
     }
 }
 
-@media screen and (min-width:1200px) {
-    .description-dish {
-
-        width: 155px;
-    }
-}
 
 .div-popular-list {
     margin-left: 16px;
 
-}
-
-@media screen and (min-width:768px) {
-
-    .div-popular-list {
-        width: 120px;
-    }
 }
 
 @media screen and (min-width:1200px) {
@@ -82,7 +69,6 @@
 
 @media screen and (min-width: 1200px) {
     .name-popular {
-        font-size: 24px;
         font-style: normal;
         font-weight: 600;
         line-height: 1.16;
@@ -100,10 +86,10 @@
 
 @media screen and (min-width:768px) {
     .name-dish {
-        white-space: nowrap;
+        /* white-space: nowrap;
         overflow: hidden;
-        text-overflow: ellipsis;
-        overflow-wrap: break-word;
+        text-overflow: ellipsis; */
+        width: 50px;
     }
 }
 
