--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,7 +17,7 @@
     </a>
     <div class="header-btn-box">
         <a
-          href="#"
+          data-modal-open
           class="shopping-link link"
           rel="noopener noreferrer"
           aria-label="shopping-card"
