--- a/src/css/hero-cook.css
+++ b/src/css/hero-cook.css
@@ -3,7 +3,8 @@
 <div class="events swiper-wrapper"></div>
 <div class="page"></div>
 </div>
-
+*/
+/*
 <div class="swiper">
   <div class="swiper-wrapper"></div>
   <div class="swiper-pagination"></div>
