--- a/src/css/hero-cook.css
+++ b/src/css/hero-cook.css
@@ -1,15 +1,17 @@
 /*
+<section class="container">
 <div class="swiper">
 <div class="events swiper-wrapper"></div>
-<div class="event"></div>
 </div>
+<div class="slice"></div>
+</section>
 
 <div class="swiper">
   <div class="swiper-wrapper"></div>
   <div class="swiper-pagination"></div>
 </div>
 */
-
+/*
 .events {
   display: flex;
 }
@@ -41,3 +43,4 @@
 .dish {
   display: flex;
 }
+*/
