--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,6 +17,8 @@
 @import url('./modal-rating.css');
 @import url('./modal-recipe.css');
 @import url('./main-section.css');
+@import url('./favorite-page.css');
+
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
