--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,7 +23,7 @@
           aria-label="shopping-card"
         >
           <svg class="shopping-icon" width="24" height="24">
-            <use href="/src/sprite.svg#icon-bag"></use>
+            <use href="./sprite.svg#icon-bag"></use>
           </svg>
         </a>
         <!-- Burger mobile -->
