--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,6 +18,8 @@
 @import url('./modal-recipe.css');
 @import url('./main-section.css');
 @import url('./favorite-page.css');
+@import url('./search.css');
+
 
 
 :root {
