--- a/src/css/list-of-recipes.css
+++ b/src/css/list-of-recipes.css
@@ -1,5 +1,3 @@
-import {sprite} from 
-
 .card-list {
   display: flex;
   flex-wrap: wrap;
@@ -90,6 +88,12 @@ import {sprite} from
   top: 16px;
   right: 16px;
   z-index: 100;
+  opacity: 0.5;
+  fill: none;
+  stroke: #f8f8f8;
+  stroke-width: 2;
+  stroke-linecap: round;
+  stroke-linejoin: round;
 }
 
 .card-text {
@@ -259,6 +263,13 @@ import {sprite} from
 .svg-star {
   width: 18px;
   height: 18px;
+  fill: white;
+  fill-opacity: 0.1;
+}
+
+.svg-star.rated {
+  fill: #eea10c;
+  fill-opacity: 1;
 }
 
 @media screen and (min-width: 768px) {
