--- a/src/partials/modal-order.html
+++ b/src/partials/modal-order.html
@@ -3,7 +3,7 @@
     <div class="thumb-order">
         <button data-modal-close type="button" class="thumb-btn-order">
           <svg width="20" height="20" class="thumb-svg-order">
-            <use href="./sprite.svg#icon-modal-cross"></use>
+            <use href="sprite.svg#icon-modal-cross"></use>
           </svg>
         </button>
         <strong class="modal-order-head"
