--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
-<section class="header">
-  <div class="header-container container" id="header">
+<section class="header container">
+  <div class="header-container" id="header">
     <!-- Navigation -->
     <nav class="nav-header">
       <ul class="nav-list">
@@ -39,7 +39,7 @@
         </button>
 
         <!-- Toggle -->
-        <!-- <script src="./js/utils/switcher.js"></script> -->
+        
         <div class="theme-switcher main js-switcher">
           <input type="checkbox" class="input-switcher" id="switch" /><label
             class="input-label"
@@ -62,14 +62,14 @@
         width="32"
         height="32"
       >
-        <!-- <path
+        <path
           fill-rule="evenodd"
           d="M4.293 4.293a1 1 0 011.414 0L10
           8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0
           01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10
           4.293 5.707a1 1 0 010-1.414z"
           clip-rule="evenodd"
-        ></path> -->
+        ></path>
       </svg>
     </button>
 
