--- a/src/css/list-of-popular.css
+++ b/src/css/list-of-popular.css
@@ -1,3 +1,8 @@
+body {
+    font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+
+}
+
 .description-dish {
     color: rgba(5, 5, 5, 0.8);
     font-size: 12px;
@@ -9,11 +14,6 @@
     white-space: normal;
 }
 
-.description-dish {
-    font-size: 10px;
-    line-height: 1.4;
-    width: 160px;
-}
 
 @media screen and (min-width:768px) {
     .description-dish {
@@ -25,17 +25,13 @@
 }
 
 
+
+
 .div-popular-list {
     margin-left: 16px;
 
 }
 
-@media screen and (min-width:1280px) {
-
-    .div-popular-list {
-        width: 155px;
-    }
-}
 
 .img-dish {
     width: 64px;
@@ -57,27 +53,8 @@
     }
 }
 
-.name-popular {
-    text-transform: uppercase;
-    color: var(--color-title-text);
-    font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 1.28;
-}
-
-@media screen and (min-width: 1280px) {
-    .name-popular {
-        font-style: normal;
-        font-weight: 600;
-        line-height: 1.16;
-    }
-}
-
 .name-dish {
     color: var(--lt-text-color);
-    font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
     font-size: 14px;
     line-height: 1.28;
     font-weight: 600;
@@ -86,10 +63,37 @@
 
 @media screen and (min-width:768px) {
     .name-dish {
-        /* white-space: nowrap;
+        white-space: nowrap;
         overflow: hidden;
-        text-overflow: ellipsis; */
-        width: 50px;
+        text-overflow: ellipsis;
+        overflow-wrap: break-word;
+        line-height: 1.2;
+        width: 136px;
+    }
+}
+
+.name-popular {
+    text-transform: uppercase;
+    color: var(--color-title-text);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 1.28;
+}
+
+@media screen and (min-width:768px) {
+    .name-popular {
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 1.3;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .name-popular {
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 1.16;
     }
 }
 
