--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -87,8 +87,10 @@
           type="checkbox"
           class="input-switcher"
           id="mobile-switch"
-        /><label class="input-label" for="mobile-switch"></label>
+        />
+        <label class="input-label" for="mobile-switch"></label>
       </li>
+      
     </ul>
   </div>
 </section>
