--- a/src/css/list-of-recipes.css
+++ b/src/css/list-of-recipes.css
@@ -1,48 +1,3 @@
-/* .all-categories-btn {
-  display: inline-flex;
-  padding: 14px 29px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  margin-bottom: 24px;
-  min-width: 176px;
-  min-height: 50px;
-  margin-left: 20px;
-
-  border-radius: 15px;
-  border: 1px solid rgba(5, 5, 5, 0.2);
-
-  color: rgba(5, 5, 5, 0.5);
-  font-family: Inter;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  transition: background-color 250ms cubic-bezier(1, 0, 0, 1),
-    color 250ms cubic-bezier(1, 0, 0, 1);
-}
-
-.all-categories-btn:hover,
-.all-categories-btn:focus {
-  background-color: var(--brand-color);
-  color: var(--dt-text-color);
-}
-
-.all-categories-btn-active {
-  color: var(--dt-text-color);
-  background-color: var(--brand-color);
-}
-
-.all-categories-btn:active {
-  transform: translateY(4px);
-}
-
-@media screen and (min-width: 1280px) {
-  .all-categories-btn {
-    padding: 14px 28px;
-  }
-} */
-
 .card-list {
   display: flex;
   flex-wrap: wrap;
@@ -111,13 +66,13 @@
 }
 
 @media screen and (max-width: 767px) {
-  .card-item:nth-last-child(-n + 3) {
+  .card-item:nth-child(n + 7) {
     display: none;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .card-item:nth-last-child(-n + 1) {
+  .card-item:nth-child(n + 9) {
     display: none;
   }
 }
@@ -133,6 +88,12 @@
   top: 16px;
   right: 16px;
   z-index: 100;
+  opacity: 0.5;
+  fill: none;
+  stroke: #f8f8f8;
+  stroke-width: 2;
+  stroke-linecap: round;
+  stroke-linejoin: round;
 }
 
 .card-text {
@@ -302,6 +263,13 @@
 .svg-star {
   width: 18px;
   height: 18px;
+  fill: white;
+  fill-opacity: 0.1;
+}
+
+.svg-star.rated {
+  fill: #eea10c;
+  fill-opacity: 1;
 }
 
 @media screen and (min-width: 768px) {
