--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,6 +19,7 @@
 @import url('./main-section.css');
 @import url('./favorite-page.css');
 @import url('./search.css');
+@import url('./pagination.css');
 
 
 
