--- a/src/partials/favorite-page.html
+++ b/src/partials/favorite-page.html
@@ -4,9 +4,9 @@
       <div class="hero-img js-hero-img"></div>
     </div>
 
-    <div class="all-favourites-btn js-all-favourites-btn"></div>
+    <ul class="all-favourites-btn js-all-favourites-btn"></ul>
 
-    <div calss="all-favourite-cards js-all-favourite-cards">
+    <ul class="all-favourite-cards js-all-favourite-cards">
       <div class="failure-block">
         <svg class="svg-hat">
           <use href="sprite.svg#icon-chef-hat"></use>
@@ -17,6 +17,6 @@
           for easier access in the future.
         </p>
       </div>
-    </div>
+    </ul>
   </div>
 </section>
