--- a/src/css/search.css
+++ b/src/css/search.css
@@ -1,9 +1,6 @@
 select {
     -webkit-appearance: none;
 }
-.search {
-    margin-bottom: 14px;
-}
 .search-container {
     display: flex;
     flex-direction: row;
@@ -62,91 +59,26 @@ select {
 
 }
 /* All containers */
-
-/* search input */
 .search-box {
     margin-bottom: 14px;
-    display: inline-flex;
-    flex-direction: column;
-    gap: 8px;
-    position: relative;
 }
-.search-input {
-    padding: 14px 45px;
-    align-items: flex-start;
-    color: var(--lt-text-color-opacity-fifty);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-.search-input:focus {
-    color: var(--lt-text-color);
-}
-/* time selection */
+
 .time-box {
-    position: relative;
-    display: inline-flex;
-    flex-direction: column;
-    gap: 8px;
     margin-right: 14px;
-    margin-bottom: 16px;
 }
 
-.time {
-    padding: 14px 18px;
-    justify-content: center;
-    align-items: center;
-    color: var(--lt-text-color-opacity-thirty);;
-    font-family: Inter;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 18px;
-}
-.time:focus {
-    color: var(--lt-text-color);
-}
-/* area aelection */
- .area-box {
-    position: relative;
-    display: inline-flex;
-    flex-direction: column;
-    gap: 8px;
-    margin-bottom: 16px;
-} 
-.area {
-    display: flex;
-    padding: 14px 18px;
-    justify-content: center;
-    align-items: center;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 18px;
+/* .area-box {
+    
+} */
 
-}
-
-/* ingredient selection */
 .ingredients-box {
-    position: relative;
    margin-bottom: 16px; 
-   display: inline-flex;
-    flex-direction: column;
-    gap: 8px;
-}
-.ingredient {
-    display: flex;
-    padding: 14px 18px;
-    justify-content: center;
-    align-items: center;
 }
 
-/*button*/
-.button-box {
-    display: flex;
-    justify-content: end;
-    max-width: 780px;
-}
 .reset-button {
+    margin-left: calc(100% - 105px);
+    width: 105px;
     font-size: 18px;
-    border: none;
-    background: transparent;
 }
 
 /* Text */
@@ -155,40 +87,13 @@ select {
     font-size: 12px;
     font-weight: 500;
     line-height: 14px;
-   color: var(--lt-text-color-opacity-fifty);
+   color: var(lt-text-color-opacity-thirty);
 }
 
 /* Borders */
 .border {
     border-radius: 15px;
-    border: 1px solid var(--lt-border-color-opacity-twenty);
+    border: 1px solid var(--lt-text-color-opacity-fifty);
+    background-color: var(lt-background-color);
 
 }
-/* icons  */
-.icon {
-    fill: var(--lt-text-color-opacity-fifty);
-    vertical-align: top;
-}
-.search-icon {
-    position: absolute;
-    top: 65%;
-    left: 20px;
-    transform: translateY(-50%);
-}
-.search-input:focus .search-icon{
-    fill: var(--brand-color)
-}
-.left-icon {
-    transform: rotate(270deg);
-    position: absolute;
-    top: 55%;
-    right: 18px;
-    
-}
-.cross-icon {
-    position: absolute;
-    top: 65%;
-    right: 20px; 
-}
-
-
