--- a/src/partials/block-search.html
+++ b/src/partials/block-search.html
@@ -7,7 +7,8 @@
                 <svg class="search-icon icon" width="15" height="15">
                     <use href="../sprite.svg#icon-search"></use>
                   </svg>
-                 <input class="search-input border" placeholder="Enter Text">
+                 <input class="search-input border" placeholder="Enter Text"  type="text"
+                 name="username">
                  <svg class="cross-icon icon" width="15" height="15">
                     <use href="../sprite.svg#icon-modal-cross"></use>
                   </svg>
@@ -68,7 +69,7 @@
                 <path d="M12 4L4 12" stroke="#9BB537" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M4 4L12 12" stroke="#9BB537" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
-                <button class="reset-button label-text">
+                <button class="reset-button label-text" type="submit">
            
             Reset the filter</button>  
         </div>
